src/test/deca/context/valid/fieldcall2.deca
class Animal {
    float poids;
    protected int nbPates;

    void faireCrier() {
        println("Grrrrrrrrrr");
    }

    float nourrir(float poidsNourriture) {
        poids = poids + poidsNourriture;
        return poids;
    }

}
{
    Animal animal = new Animal();
    print(animal.poids);
}