src/test/deca/context/invalid/bad_method_call2.deca
//ERROR :18
class Animal {
    protected float poids;
    protected int nbPates;

    void faireCrier() {
        println("Grrrrrrrrrr");
    }

    float nourrir(float poidsNourriture) {
        poids = poids + poidsNourriture;
        return poids;
    }
}
{

    Animal Zebre = new Animal();
    float x = Zebre.nourrir; 

}